# Excel-Dr

./: .gitignore  README.md  SECURITY.md  build_exe.bat  cleaner.py  run_cleaner.bat
.github/workflows/: windows-release.yml
apps/excel_dr_flutter/: README.md  pubspec.yaml
apps/excel_dr_flutter/lib/: main.dart
apps/excel_dr_flutter/native/hub/: Cargo.toml
apps/excel_dr_flutter/native/hub/src/actors/: mod.rs
apps/excel_dr_flutter/native/hub/src/signals/: mod.rs
apps/excel_dr_flutter/test/: widget_test.dart
apps/excel_dr_flutter/windows/: CMakeLists.txt
apps/excel_dr_flutter/windows/flutter/: generated_plugins.cmake
apps/excel_dr_flutter/windows/runner/: Runner.rc  main.cpp
docs/: backend-capability-checklist.md  flutter-rinf-build-guide.md  flutter-rust-rinf-rebuild-plan.md  promo-copy.md  release-notes-v1.0.0.md  release-notes-v1.1.0.md
docs/prototypes/: excel-dr-flutter-rinf-ui-v13.html
rust/excel_dr_core/: Cargo.toml
rust/excel_dr_core/src/: lib.rs  main.rs
rust/excel_dr_core/tests/: regression.rs
scripts/: build_first_phase_release.ps1  build_flutter_rinf_shell.ps1  excel_dr_single_launcher.cs  flutter_rinf_env.ps1  generate_clean_fixtures.py  generate_cover.ps1  smoke_test_current_backend.py  smoke_test_rust_backend.py
tests/fixtures/: README.md
