[package]
name = "excel_dr_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
xmltree = "0.11"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
